Update work experience and education

--- a/pages/en/education.html
+++ b/pages/en/education.html
@@ -9,14 +9,14 @@ permalink: /education
 <div class="blurb">
     <h1>Education</h1>
 
-    <p>
-    I have a typical French engineering educational background, going from a preparatory school to an engineering school. 
-    I specialized in data science, AI and research.
+    <p>prepa-section
+    I have a typical French engineering educational background, going from a <a href="#prepa-section">preparatory school</a> to an <a href="#enssat-section">engineering school</a>. 
+    I specialized in data science, AI and research with the obtention of a <a href="#msif-section">second diploma</a> in parallel of my engineer courses.
     My well-rounded educational background made me gain knowledge on various topics, which I believe made me a more versatile engineer. 
     </p>
 
 
-    <h2><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="msif-section"><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
         Master degree in research in computer science Rennes 1 (2019-2020)
     </h2>
         <p>
@@ -45,7 +45,7 @@ permalink: /education
             <li>Data analysis and probabilistic modeling</li>
             <li>Writting of scientific publications</li>
         </ul>
-    <h2><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="enssat-section"><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
         Engineering diploma in computer science (AI) at ENSSAT Lannion (2017-2020)
     </h2>
         <p>
@@ -114,7 +114,7 @@ permalink: /education
                     <li>Basic digital systems</li>
                 </ul></li>
         </ul>
-    <h2><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo of the lycée Pothier" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
+    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo of the lycée Pothier" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
         Preparatory classes at Lycée Pothier Orléans(2015-2017)</h2>
         <p>
         Intensive Mathematics and Physics program for engineering schools in France.
