--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -24,7 +24,7 @@ permalink: /work_experiences
 				date='November 2020 - Now' 
 				company='<a href="http://www-list.cea.fr/en/">CEA</a>' 
 				location='Paris, France' 
-				skill='Python, C++, Deep Neural Network' 
+				skill='Python, C++, Cuda, TensorRT, Deep Neural Network' 
 			%}
 
 			<h3>Description of the company :</h3>
@@ -32,6 +32,11 @@ permalink: /work_experiences
 				Atomic Energy Commission (CEA) is one of the principal numeric actor in the France and Europe.
 				It aims to do research and transfer its knowledge to the industry.
 				Systems and Technologies Integration Laboratory (List) is an insitut of the CEA Tech that specializes in smart digital system research.
+			</p>
+			<h3>Descritpion of my work :</h3>
+			<p>
+				I work as one of the developer of N2D2 (for 'Neural Network Design & Deployment'), an open source framework for Deep Neural Network (DNN) simulation and full DNN-based applications building.
+				The project is available on <a href="https://github.com/CEA-LIST/N2D2">GitHub</a>.
 			</p>
 		</div>
 		
@@ -63,6 +68,7 @@ permalink: /work_experiences
 				<a href="https://www.researchgate.net/publication/2459804_Approximating_Multi-Dimensional_Aggregate_Range_Queries_Over_Real_Attributes">GENHIST</a> et 
 				<a href="https://www.microsoft.com/en-us/research/publication/stholes-a-multidimensional-workload-aware-histogram/">STHOLES</a>) using Python (3.6.9) and I compared them with one another. 
 				In order to make it easy to carry on with my work, I created a dockerized API using <a href="https://www.docker.com/">Docker</a> and <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> before ending my internship.
+				The code developed during this project is available on <a href="https://github.com/cmoineau/Histogramme_Multidimensionnel">GitHub</a>.
 			</p>
 
 			<h3>Main Takeaways :</h3>
@@ -95,7 +101,7 @@ permalink: /work_experiences
 			
 			<h3>Main Takeaways :</h3>
 			<p>
-				This internship was a very good first research experience. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
+				This internship was a very good first research experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
 			</p>
 		</div>
 		<div class="box">
