--- a/pages/fr/education.html
+++ b/pages/fr/education.html
@@ -10,11 +10,11 @@ permalink: /education/fr
     <h1>Formation</h1>
 
     <p>
-        J'ai suivi le parcours classique pour devenir ingénieur, en faisant une classe préparatoire aux grandes écoles et en entrant dans une école d'ingénieur.
-        Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche.
+        J'ai suivi le parcours classique pour devenir ingénieur, en faisant une <a href="#prepa-section">classe préparatoire</a> aux grandes écoles et en entrant dans une <a href="#enssat-section">école d'ingénieur</a>.
+        Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche grâce à un <a href="#msif-section">master recherche informatique</a>.
         Grâce à mon parcours, j'atteste de solides connaissances sur différents sujets ce qui fait ma flexibilité en tant qu'ingénieur.
     </p>
-    <h2><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="msif-section"><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
     Master Recherche en Informatique Rennes 1 (2019-2020)</h2>
 
     <p>
@@ -43,77 +43,77 @@ permalink: /education/fr
             <li>Analyse de données et modélisation probabilistique</li>
             <li>Rédaction d'articles scientifiques</li>
         </ul>
-        <h2><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-        Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h2>
+    <h2 id="enssat-section"><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h2>
 
-        <p>
-            J'ai suivi une formation d'ingénieur en informatique spécialisé en IA à l'ENSSAT Lannion.
-        </p><p>
-            Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreuses autres matières.
-            L'objectif de la formation était de faire de nous des ingénieurs polyvalents.
-            La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les enjeux des autres branches de l'ingénierie 
-            et ainsi mieux travailler en équipe.
-        </p>
-        <h3 style="text-align: center;">Liste des cours suivis
-        <i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-        title="Cliquez pour voir la liste des cours"
-        onclick="document.getElementById('enssat').style.display='block';
-                 document.getElementById('enssat').style.animation='fadein 1s ease';
-                 document.getElementById('2_hide').style.display='initial';
-                 document.getElementById('2_show').style.display='none';"></i> 
-        <i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-        title="Cliquez pour cacher la liste des cours"
-        onclick="document.getElementById('enssat').style.animation='fadeout 1s ease';
-                 setTimeout(function(){document.getElementById('enssat').style.display='none';}, 1000);
-                 document.getElementById('2_hide').style.display='none';
-                 document.getElementById('2_show').style.display='initial';"></i></h3>
-            
+    <p>
+        J'ai suivi une formation d'ingénieur en informatique spécialisé en IA à l'ENSSAT Lannion.
+    </p><p>
+        Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreuses autres matières.
+        L'objectif de la formation était de faire de nous des ingénieurs polyvalents.
+        La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les enjeux des autres branches de l'ingénierie 
+        et ainsi mieux travailler en équipe.
+    </p>
+    <h3 style="text-align: center;">Liste des cours suivis
+    <i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+    title="Cliquez pour voir la liste des cours"
+    onclick="document.getElementById('enssat').style.display='block';
+                document.getElementById('enssat').style.animation='fadein 1s ease';
+                document.getElementById('2_hide').style.display='initial';
+                document.getElementById('2_show').style.display='none';"></i> 
+    <i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+    title="Cliquez pour cacher la liste des cours"
+    onclick="document.getElementById('enssat').style.animation='fadeout 1s ease';
+                setTimeout(function(){document.getElementById('enssat').style.display='none';}, 1000);
+                document.getElementById('2_hide').style.display='none';
+                document.getElementById('2_show').style.display='initial';"></i></h3>
+        
 
-        <ul id="enssat" class="reveal" style="display:none; list-style-type: none;">
-            <li ><strong style="font-size: 1em;">Mathématiques :</strong></li>
-                <li><ul>
-                    <li>Logique Mathématiques</li>
-                    <li>Analyse</li>
-                    <li>Algèbre</li>
-                    <li>Analyse discrète et continue</li>
-                    <li>Probabilités</li>
-                    <li>Statistiques</li>
-                    <li>Théorie des files d'attente</li>
-                    <li>Cryptographie</li>
-                </ul></li>
-            <li><strong style="font-size: 1em;">Informatique :</strong></li>
-                <li><ul>
-                    <li>Réseaux</li>
-                    <li>Système d'exploitation</li>
-                    <li>Bases de C</li>
-                    <li>Bases de Java</li>
-                    <li>Algorithmique</li>
-                    <li>Structure de données</li>
-                    <li>Programmation objet</li>
-                    <li>Génie logiciel</li>
-                    <li>Temps réel</li>
-                    <li>Algorithmes distribués</li>
-                    <li>Programmation Unix</li>
-                    <li>Bases de données relationnelles</li>
-                    <li>Bases de données avancées (logique floue)</li>
-                    <li>Théorie des langages et compilation</li>
-                    <li>Calculabilité</li>
-                    <li>Programmation web Client / Serveur</li>
-                    <li>Services Web</li>
-                    <li>Sécurité des systèmes logiciel</li>
-                    <li>Porgrammation déclarative et fonctionnelle</li>
-                    <li>Apprentissage Automatique</li>
-                    <li>Web Data Management</li>
-                    <li>Analyse et fouille de données massives (web sémantique)</li>
-                    <li>Traitement automatique du langage et de la parole</li>
-                </ul></li>
-            <li><strong style="font-size: 1em;">Électronique :</strong></li>
-                <li><ul>
-                    <li>Micro-contrôleurs</li>
-                    <li>Bases des systèmes  numériques</li>
-                </ul></li>
-        </ul>
-    <h2><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
+    <ul id="enssat" class="reveal" style="display:none; list-style-type: none;">
+        <li ><strong style="font-size: 1em;">Mathématiques :</strong></li>
+            <li><ul>
+                <li>Logique Mathématiques</li>
+                <li>Analyse</li>
+                <li>Algèbre</li>
+                <li>Analyse discrète et continue</li>
+                <li>Probabilités</li>
+                <li>Statistiques</li>
+                <li>Théorie des files d'attente</li>
+                <li>Cryptographie</li>
+            </ul></li>
+        <li><strong style="font-size: 1em;">Informatique :</strong></li>
+            <li><ul>
+                <li>Réseaux</li>
+                <li>Système d'exploitation</li>
+                <li>Bases de C</li>
+                <li>Bases de Java</li>
+                <li>Algorithmique</li>
+                <li>Structure de données</li>
+                <li>Programmation objet</li>
+                <li>Génie logiciel</li>
+                <li>Temps réel</li>
+                <li>Algorithmes distribués</li>
+                <li>Programmation Unix</li>
+                <li>Bases de données relationnelles</li>
+                <li>Bases de données avancées (logique floue)</li>
+                <li>Théorie des langages et compilation</li>
+                <li>Calculabilité</li>
+                <li>Programmation web Client / Serveur</li>
+                <li>Services Web</li>
+                <li>Sécurité des systèmes logiciel</li>
+                <li>Porgrammation déclarative et fonctionnelle</li>
+                <li>Apprentissage Automatique</li>
+                <li>Web Data Management</li>
+                <li>Analyse et fouille de données massives (web sémantique)</li>
+                <li>Traitement automatique du langage et de la parole</li>
+            </ul></li>
+        <li><strong style="font-size: 1em;">Électronique :</strong></li>
+            <li><ul>
+                <li>Micro-contrôleurs</li>
+                <li>Bases des systèmes  numériques</li>
+            </ul></li>
+    </ul>
+    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
     Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
     </h2>
         <p>
