--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -24,7 +24,7 @@ permalink: /work_experiences/fr
 				date='November 2020 - Maintenant' 
 				company='<a href="http://www-list.cea.fr/">CEA</a>' 
 				location='Paris, France' 
-				skill='Python, C++, Réseaux de Neuronnes profonds'
+				skill='Python, C++, Cuda, TensorRT, Réseaux de Neuronnes profonds'
 			%}
 		
 			<h3>Description de l'entreprise :</h3>
@@ -32,6 +32,13 @@ permalink: /work_experiences/fr
 				Le Commissariat de l'énergie atomique (CEA) est un acteur majeur du numérique français et européen. 
 				Il a pour objectif de faire de la recherche et de transmettre le savoir vers le milieu industriel.
 				Le Laboratoire d'Intégration des Systèmes et des Technologies (LIST) est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
+			</p>
+			<h3>Description du poste :</h3>
+			<p>
+				Je travail en tant que dévelopeur pour N2D2 (Neural Network Design & Deployment), un projet open source permettant l'apprentissage et la l'inférence de réseau de neuronnes profond ainsi que leurs déploiements sur matériel embarqué.
+				Le projet est disponible sur <a href="https://github.com/CEA-LIST/N2D2">GitHub</a>.
+				I work as one of the developer of N2D2 (for 'Neural Network Design & Deployment'), an open source CAD framework for Deep Neural Network (DNN) simulation and full DNN-based applications building.
+				The project is available on <a href="https://github.com/CEA-LIST/N2D2">GitHub</a>.
 			</p>
 		</div>
 
@@ -69,6 +76,7 @@ permalink: /work_experiences/fr
 			<a href="https://www.microsoft.com/en-us/research/publication/stholes-a-multidimensional-workload-aware-histogram/">STHOLES</a>) 
 			en Python (3.6.9). 
 			Enfin, j'ai utilisé <a href="https://www.docker.com/">Docker</a> et <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> afin de créer une API dockerisée pour qu'il soit plus facile de reprendre le travail que j'ai réalisé en stage.
+			Le code développé pendant le stage est disponible sur <a href="https://github.com/cmoineau/Histogramme_Multidimensionnel">GitHub</a>.
 		</p>
 
 		<h3>Expérience acquise :</h3>
