--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -7,7 +7,7 @@ permalink: /fr
 ---
 	<div class="blurb">
 		<div id="presentation">
-			<img src="/ressources/Cyril.jpg" alt="Une photo de moi"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+			<img class="profile_picture" src="/ressources/Cyril.jpg" alt="Photo de profil">
 			<h1 class="main_title">Cyril MOINEAU</h1>
 		</div>
 		<div class="flex-container">
