Add C++ in programming language and moce resources -> _static

--- a/_posts/2019-01-01-bomberball-en.html
+++ b/_posts/2019-01-01-bomberball-en.html
@@ -1,7 +1,7 @@
 ---
 layout: post_en
 title: "Bomberball"
-image: /ressources/logoBomberBall.png
+image: /_static/logoBomberBall.png
 lang: "en"
 ref: bomberball
 tags: [school, dev]
