--- a/_posts/2019-01-01-bomberball-fr.html
+++ b/_posts/2019-01-01-bomberball-fr.html
@@ -1,7 +1,7 @@
 ---
 layout: post_fr
 title: "Bomberball"
-image: /ressources/logoBomberBall.png
+image: /_static/logoBomberBall.png
 lang: "fr"
 ref: bomberball
 tags: [école, dev]
