--- a/pages/en/education.html
+++ b/pages/en/education.html
@@ -16,7 +16,7 @@ permalink: /education
     </p>
 
 
-    <h2 id="msif-section"><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="msif-section"><a href="https://international.univ-rennes1.fr/en"><img src="/_static/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
         Master degree in research in computer science Rennes 1 (2019-2020)
     </h2>
         <p>
@@ -45,7 +45,7 @@ permalink: /education
             <li>Data analysis and probabilistic modeling</li>
             <li>Writting of scientific publications</li>
         </ul>
-    <h2 id="enssat-section"><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="enssat-section"><a href="http://www.enssat.fr/"><img src="/_static/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
         Engineering diploma in computer science (AI) at ENSSAT Lannion (2017-2020)
     </h2>
         <p>
@@ -114,7 +114,7 @@ permalink: /education
                     <li>Basic digital systems</li>
                 </ul></li>
         </ul>
-    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo of the lycée Pothier" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
+    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/_static/pothier.jpg" alt="Logo of the lycée Pothier" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
         Preparatory classes at Lycée Pothier Orléans(2015-2017)</h2>
         <p>
         Intensive Mathematics and Physics program for engineering schools in France.
