--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -7,7 +7,7 @@ permalink: /
 ---
 	<div class="blurb">    
 		<div id="presentation">
-			<img class="profile_picture" src="/ressources/Cyril.jpg" alt="Profil picture">
+			<img class="profile_picture" src="/_static/Cyril.jpg" alt="Profil picture">
 			<h1 class="main_title">Cyril MOINEAU</h1>
 		</div>
 		<div class="flex-container">
@@ -31,28 +31,31 @@ permalink: /
 				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
-						<li style="margin-bottom: 0.2em;">
+						<li>
 							<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
-							<img src="/ressources/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a></li>
-						<li style="margin-bottom: 0.2em;">
+							<img src="/_static/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a></li>
+						<li>
+								<a href="https://github.com/cmoineau?tab=repositories&language=cpp" style="margin:1em;">
+									<img src="/_static/cpp.png" alt="cpp logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>C++</b></a></li>
+						<li>
 							<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
-								<img src="/ressources/java.png" alt="java logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a></li>
-						<li style="margin-bottom: 0.2em;">
+								<img src="/_static/java.png" alt="java logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a></li>
+						<li>
 							<a href="https://github.com/cmoineau?tab=repositories&language=javascript" style="margin:1em;">
-								<img src="/ressources/js.png" alt="javascript logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a></li>
-						<li style="margin-bottom: 0.2em;">
+								<img src="/_static/js.png" alt="javascript logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a></li>
+						<li>
 							<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
-								<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
+								<img src="/_static/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 					<div class="bulb"><h3 style="border-bottom: 0px solid; margin-top: auto;"><i class="fa fa-language" aria-hidden="true"></i> Languages :</h3></div>
 					<ul style="list-style-type: none; margin-left: -1em;">
 						<li style="margin-bottom: 0.5em;">
-							<img src="/ressources/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
+							<img src="/_static/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
 						<li style="margin-bottom: 0.5em;">
-							<img src="/ressources/en_flag.png" alt="UK flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>English (C1 level)</b></li>
+							<img src="/_static/en_flag.png" alt="UK flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>English (C1 level)</b></li>
 						<li style="margin-bottom: 0.5em;">
-							<img src="/ressources/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
+							<img src="/_static/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
 						
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
