--- a/pages/fr/education.html
+++ b/pages/fr/education.html
@@ -14,7 +14,7 @@ permalink: /education/fr
         Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche grâce à un <a href="#msif-section">master recherche informatique</a>.
         Grâce à mon parcours, j'atteste de solides connaissances sur différents sujets ce qui fait ma flexibilité en tant qu'ingénieur.
     </p>
-    <h2 id="msif-section"><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="msif-section"><a href="https://www.univ-rennes1.fr/"><img src="/_static/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
     Master Recherche en Informatique Rennes 1 (2019-2020)</h2>
 
     <p>
@@ -43,7 +43,7 @@ permalink: /education/fr
             <li>Analyse de données et modélisation probabilistique</li>
             <li>Rédaction d'articles scientifiques</li>
         </ul>
-    <h2 id="enssat-section"><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+    <h2 id="enssat-section"><a href="http://www.enssat.fr/fr_FR/home"><img src="/_static/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
     Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h2>
 
     <p>
@@ -113,7 +113,7 @@ permalink: /education/fr
                 <li>Bases des systèmes  numériques</li>
             </ul></li>
     </ul>
-    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
+    <h2 id="prepa-section"><a href="http://www.lycee-pothier.com/"><img src="/_static/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
     Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
     </h2>
         <p>
