--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -19,7 +19,7 @@ permalink: /work_experiences/fr
 
 		<div class="box">
 			<div class="bulb"><h2 id="cea">CEA LIST</h2></div>
-			<img class="center" src="/ressources/cea.jpg" alt="Logo CEA" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/_static/cea.jpg" alt="Logo CEA" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 			{% include we_info_fr.html 
 				date='November 2020 - Maintenant' 
 				company='<a href="http://www-list.cea.fr/">CEA</a>' 
@@ -45,7 +45,7 @@ permalink: /work_experiences/fr
 	
 	<div class="box">
 		<div class="bulb"><h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2></div>
-		<img class="center" src="/ressources/irisa.jpg" alt="Logo IRISA" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/_static/irisa.jpg" alt="Logo IRISA" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			
 		{% include we_info_fr.html 
 			date='Novembre 2019 - Juillet 2020' 
@@ -89,7 +89,7 @@ permalink: /work_experiences/fr
 	</div>
 	<div class="box">
 		<div class="bulb"><h2 id="NCTU">Stage à la NCTU 2019</h2></div>
-		<img class="center" src="/ressources/NCTU.jpg" alt="Logo NCTU" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/_static/NCTU.jpg" alt="Logo NCTU" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 		{% include we_info_fr.html 
 			date='Juin 2019 - Août 2019' 
 			duration='2 mois'
@@ -117,7 +117,7 @@ permalink: /work_experiences/fr
 	</div>		
 	<div class="box">
 		<div class="bulb"><h2 id="Metropole">Stage à Orléans Métropole 2018</h2></div>
-		<img class="center" src="/ressources/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/_static/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 		
 		{% include we_info_fr.html 
 			date='Juillet 2018 - Août 2018' 
