--- a/_posts/2019-03-30-adackathon-en.html
+++ b/_posts/2019-03-30-adackathon-en.html
@@ -1,7 +1,7 @@
 ---
 layout: post_en
 title: "Ada Lovelace - Hacakthon"
-image: /ressources/adackathon.png
+image: /_static/adackathon.png
 lang: "en"
 ref: adackathon
 tags: [social, management]
@@ -19,7 +19,7 @@ tags: [social, management]
         </p>
 
         <figure>
-            <img src="/ressources/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
+            <img src="/_static/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
             <figcaption>Women rate in higher education <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
         </figure>
 
