--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -18,7 +18,7 @@ permalink: /work_experiences
 
 		<div class="box">
 			<div class="bulb"><h2 id="cea">CEA list</h2></div>
-			<img class="center" src="/ressources/cea.jpg" alt="CEA Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/_static/cea.jpg" alt="CEA Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			{% include we_info_en.html 
 				date='November 2020 - Now' 
@@ -42,7 +42,7 @@ permalink: /work_experiences
 		
 		<div class="box">
 			<div class="bulb"><h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2></div>
-			<img class="center" src="/ressources/irisa.jpg" alt="IRISA Logo" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/_static/irisa.jpg" alt="IRISA Logo" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			{% include we_info_en.html 
 				date='November 2019 - July 2020' 
 				duration='6 months' 
@@ -80,7 +80,7 @@ permalink: /work_experiences
 		</div>
 		<div class="box">
 			<div class="bulb"><h2 id="NCTU">Internship at the NCTU 2019</h2></div>
-			<img class="center" src="/ressources/NCTU.jpg" alt="NCTU Logo" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/_static/NCTU.jpg" alt="NCTU Logo" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 			
 			{% include we_info_en.html 
 				date='June 2019 - August 2019' 
@@ -106,7 +106,7 @@ permalink: /work_experiences
 		</div>
 		<div class="box">
 			<div class="bulb"><h2 id="Metropole">Orléans Métropole 2018</h2></div>
-			<img class="center" src="/ressources/orleans_metropole.jpg" alt="Orleans Metropole Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/_static/orleans_metropole.jpg" alt="Orleans Metropole Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 			
 			{% include we_info_en.html 
 				date='July 2018 - August 2018' 
