Update about me section (en+fr)

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -12,17 +12,11 @@ permalink: /
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<div class="bulb"><h2>Who am I ?</h2></div>
+				<div class="bulb"><h2>About me</h2></div>
 					<p>
-						I am a French research engineer in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
-						I am interested in the field of machine learning and data mining. But I have many other center of interrest and I am keen on learning new things !
+						I am a French research engineer in computer science working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development.
+						I am currently working on <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> a framework to train neural network and export them on various devices.
 					</p>
-			</div>
-			<div class="box" style="margin: 1em;">
-				<div class="bulb"><h2>Currently</h2></div>
-				<p>
-					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research engineer in the domain of machine learning.
-				</p>
 			</div>
 		</div>
 
