--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -12,18 +12,12 @@ permalink: /fr
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<div class="bulb"><h2>Qui suis je ?</h2></div>
-				<p>
-					Ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
-					Je suis passionné par l'apprentissage automatique et l'exploration de données. J'ai de nombreux centres d'intérêts et suis toujours enthousiaste à l'idée de pouvoir accumuler de nouvelles connaissances. 
-				</p>
-			</div>
-			<div class="box" style="margin: 1em;">
-				<div class="bulb"><h2>Actuellement</h2></div>
-				<p>
-					Ingénieur chercheur au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
-					Je travaille sur des thématique de réseaux de neuronnes.
-				</p>
+				<div class="bulb"><h2>Qui suis-je ?</h2></div>
+					<p>
+					Ingénieur chercheur français au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
+					Je travaille sur des thématiques de réseaux de neuronnes.
+					Actuellement, je fais partie des développeurs principaux du framework <a href="https://github.com/CEA-LIST/N2D2">N2D2</a> qui a pour objectif de permettre d'embarquer des réseaux des neuronnes vers diverses cibles matérielle.
+					</p>
 			</div>
 		</div>
 
