Update bomberman experience and light mode.

--- a/_posts/2019-01-01-bomberball-en.html
+++ b/_posts/2019-01-01-bomberball-en.html
@@ -4,16 +4,31 @@ title: "Bomberball"
 image: /_static/logoBomberBall.png
 lang: "en"
 ref: bomberball
-tags: [school, dev]
+tags: [school, dev, game]
 ---
 
 <h2>BomberBall</h2>
+    <h3>General context</h3>
     <p>
-        Bomber Ball was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
-        During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
+        Bomber Ball was an important project for software engineering course.
+        During this project, we were role playing a company and the professors were playing the client. 
+        During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand.
+        The clients wanted to create a video game similar to the Bomber Man.
+        To accomplish this task we were a team of 6 students.
     </p>
-    
-    <h3>The result :</h3>
+
+    <h3>Main takeaway</h3>
+    <p>
+        This project learnt me a lot about working with other peoples (more than 2) and the different issues we can face when integrating pieces of code together.
+        One of the main issue was communication between the different subteam we created and we soon realized the importance of creating an development documentation.
+
+        We experimented different development cycle with our teachers which were roleplaying clients.
+        We were very invested in this project has it was a long one (5 months) and the creative aspect of it make it even more fun.
+
+        Indeed, we had a lot of freedom during this project, the only constraints being to create a Bomberman like game and to write the code in Java.
+    </p>
+
+    <h3>The result</h3>
         <p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
         And here you can watch a small video we made to show the result during the final presentation :
         <iframe style="border: 0; padding-top: 1em;" class="center" width="600" height="330" src="https://www.youtube.com/embed/0CLnEmHGonU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
