--- a/_posts/2019-01-01-bomberball-fr.html
+++ b/_posts/2019-01-01-bomberball-fr.html
@@ -4,16 +4,31 @@ title: "Bomberball"
 image: /_static/logoBomberBall.png
 lang: "fr"
 ref: bomberball
-tags: [école, dev]
+tags: [école, dev, jeux-vidéo]
 ---
 
 <h2>Projet BomberBall</h2>
+    <h3>Contexte</h3>
     <p>
-        Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
-        Lors de ce projet, nous avons répondu à un appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
+        Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT.
+        Lors de ce projet, nous faisions un jeu de rôle avec les enseignants.
+        Nous représentions une entreprise et les enseignants nos clients.
+        Lors de ce projet, nous avons répondu à un appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client.
+        L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. 
+        Pour réaliser ce projet nous étions une équipe de 6 étudiants, le projet a duré 5 mois.
     </p>
-    
-    <h3>Le résultat :</h3>
+    <h3>Expérience acquise</h3>
+    <p>
+        Ce projet m'a permis d'apprendre à travailler avec un groupe relativement grand sur une même base de code.
+        L'un des problèmes que nous avons rencontré à été la communication entre nous, ce qui nous a forcé à créer une documentation de dévelopement.
+
+        Nous avons expérimenté différent cycle de développement grâce à nos enseignants qui jouaient le rôle de client.
+        La longueur du projet et son aspect créatif fait que nous y étions très investis.
+
+        En effet, la seule contrainte du projet était de faire un jeu ressemblant à Bomberman et de coder en Java.
+    </p>
+
+    <h3>Le résultat</h3>
         <p>Vous pouvez voir le repository git en cliquant <a href="https://github.com/cmoineau/GL-BomberBall">ici</a>.
         Vous pouvez regarder une vidéo de présentation que nous avons réalisée pour présenter notre jeu lors de la présentation finale : 
         <iframe style="border: 0; padding-top: 1em;" class="center" width="600" height="330" src="https://www.youtube.com/embed/0CLnEmHGonU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
